--- a/client/authorization_code/public/index.html
+++ b/client/authorization_code/public/index.html
@@ -1,36 +1,34 @@
 <!doctype html>
 <html>
   <head>
-    <title>Example of the Authorization Code flow with Spotify</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <style type="text/css">
-      #login, #loggedin {
-        display: none;
-      }
-      .text-overflow {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 500px;
-      }
-    </style>
+    <title>Feather</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="Stylesheets/Style.css">
   </head>
 
   <body>
-    <div class="container">
-      <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
-        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+    <div id="maincontent" class="mdl-grid--no-spacing">
+      <div id="maindiv" class="mdl-cell mdl-cell--12-col">
+        <h1 id="title">Feather</h1>
+        <p id="subtitle">Feel The Weather</p>
       </div>
-      <div id="loggedin">
-        <div id="user-profile">
-        </div>
-        <div id="oauth">
-        </div>
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
+
+      <div id="logindiv">
+      <a href="/login" id="loginbutton"class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">Log in with Spotify</a>
       </div>
     </div>
 
+<!--      <footer id="footer"class="mdl-mini-footer mdl-cell--12-col">
+        <div class="mdl-mini-footer__left-section">
+          <div class="mdl-logo">Title</div>
+          <ul class="mdl-mini-footer__link-list">
+            <li><a href="#">Help</a></li>
+            <li><a href="#">Privacy & Terms</a></li>
+          </ul>
+        </div>
+      </footer> -->
     <script id="user-profile-template" type="text/x-handlebars-template">
       <h1>Logged in as {{display_name}}</h1>
       <div class="media">
@@ -139,4 +137,3 @@
     </script>
   </body>
 </html>
-
