--- a/client/implicit_grant/public/index.html
+++ b/client/implicit_grant/public/index.html
@@ -28,7 +28,7 @@
     </div>
     <script src="../javascripts/weatherHandler.js"></script>
     <script id="user-profile-template" type="text/x-handlebars-template">
-      <h1>Logged in as {{display_name}}</h1>
+      <h1>Logged in as VI ÄR I Implicit</h1>
       <div class="media">
         <div class="pull-left">
           <img class="media-object" width="150" src="{{images.0.url}}" />
