--- a/client/authorization_code/public/index.html
+++ b/client/authorization_code/public/index.html
@@ -17,7 +17,7 @@
     <div id="maindiv" class="mdl-cell mdl-cell--6-col"> 
       <h1 id="title">Feather</h1>
       <p id="subtitle">Feel The Weather</p>
-      <!--Display weather -->
+      <!--Displays weather -->
     </div>
     <div id="weather" class="mdl-cell mdl-cell--3-col"></div>
     </div>
